<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter Item</string>
    <string name="hint_item">Name Of Item</string>
    <string name="hint_qty">Quantity</string>
    <string name="hint_color">Color</string>
    <string name="hint_size">Size</string>
    <string name="save_button">SAVE</string>
    <string name="item_name">Name:</string>
    <string name="item_color">Color:</string>
    <string name="item_qty">Quantity:</string>
    <string name="item_size">Size:</string>
    <string name="date_added">Date:</string>
    <string name="sure_text">Are You Sure?</string>
    <string name="no_text">YES</string>
    <string name="yes_text">NO</string>
    <string name="edit_time">Edit Item</string>

    <string name="update_text">Update</string>
</resources>
