<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
    -<androidx.cardview.widget.CardView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/cardview">
    -<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="15dp">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/item_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/item_name"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/item_quantity"
        android:textStyle="italic"
        android:textSize="18sp"
        android:text="@string/item_qty"
        android:paddingTop="4dp"
        android:layout_below="@+id/item_name"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/item_color"
        android:textStyle="italic"
        android:textSize="18sp"
        android:text="@string/item_color"
        android:layout_below="@+id/item_quantity"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/item_size"
        android:textStyle="italic"
        android:textSize="18sp"
        android:text="@string/item_size"
        android:layout_below="@+id/item_color"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/item_date"
        android:textStyle="italic"
        android:textSize="18sp"
        android:text="@string/date_added"
        android:layout_below="@+id/item_size"/>


    -<TableRow
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="15dp"
    android:layout_alignParentEnd="true"
    android:layout_alignBottom="@+id/item_date">

    <Button
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:id="@+id/editButton"
        android:background="@android:drawable/ic_menu_edit"
        android:layout_marginEnd="15dp"/>

    <Button
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:id="@+id/deleteButton"
        android:background="@android:drawable/ic_delete"
        android:layout_marginEnd="15dp"/>

</TableRow>

</RelativeLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>