<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    -<androidx.cardview.widget.CardView
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    -<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="23dp">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="6dp" android:textSize="17sp"
        android:layout_centerHorizontal="true"
        android:text="@string/sure_text"
        android:id="@+id/text_alert"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/yes_text"
        android:id="@+id/conf_no_button"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/no_text"
        android:id="@+id/conf_yes_button"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>